<resources>
    <string name="app_name">To Do List</string>
    <string name="Add">Add</string>
    <string name="listContent">To Do List</string>
    <string name="title">What is your to do list for today?</string>
    <string name="Title">Title </string>
    <string name="hintTitle">Enter Your Title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="Note">note : </string>
    <string name="hintNote">Enter Your Note</string>
    <string name="edit">Edit</string>
    <string name="addDate">Date Created </string>
    <string name="editDate">Updated at : </string>
    <string name="addAlert">Add Item </string>
    <string name="editAlert">Edit Item</string>
    <string name="Deadline">Deadline</string>
    <string name="addDeadline">Pick Date</string>
    <string name="addTimeDeadline">Pick Time</string>
    <string name="editDeadline">Edit Date</string>
    <string name="editTimeDeadline">Edit Time</string>
    <string name="SortBy">Sort By </string>
</resources>
