<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/addAlert"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Title"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="match_parent"
        android:hint="@string/hintTitle"
        android:id="@+id/addTittle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Note"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="match_parent"
        android:hint="@string/hintNote"
        android:id="@+id/addNote"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="3dp"
            android:paddingEnd="5dp"
            android:text="@string/Deadline"
            android:textSize="17sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/dateDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/addDeadline"
            android:textColor="@color/colorLight"
            android:textSize="11sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/timeDeadline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorLight"
            android:textSize="11sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/addTimeDeadline"

            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/addDate"
        android:text="@string/addDate" />

        <TextView
            android:id="@+id/addDateDeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/addTimeDeadline" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round1"
            android:textColor="@android:color/white"
            android:id="@+id/saveBtn"
            android:textStyle="bold"
            android:text="@string/save"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/cancelBtn"
            android:text="@string/cancel"/>

    </LinearLayout>
</LinearLayout>
