<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/editAlert"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Title"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="match_parent"
        android:id="@+id/editTittle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Note"
        android:textAlignment="center"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="match_parent"
        android:id="@+id/editNote"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:paddingEnd="5dp"
            android:layout_marginEnd="3dp"
            android:text="@string/Deadline" />


        <Button
            android:id="@+id/dateDeadlineBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorLight"
            android:textSize="11sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/editDeadline"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="match_parent"
            android:text="@string/editTimeDeadline"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorLight"
            android:textSize="11sp"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:id="@+id/timeDeadlineBtn"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/editDate"
        android:text="@string/editDate" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/editDateDeadline"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/editTimeDeadline" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round1"
            android:textColor="@android:color/white"
            android:id="@+id/editBtn"
            android:textStyle="bold"
            android:text="@string/edit"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/cancelBtn"
            android:text="@string/cancel"/>

    </LinearLayout>
</LinearLayout>
