<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="18dp"
    android:layout_marginBottom="19dp"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded"
    android:orientation="vertical">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/option"
        android:layout_width="56dp"
        android:layout_height="51dp"

        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/ic_option"/>

    <TextView
        android:id="@+id/dateContent"
        android:layout_marginStart="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:text="@string/addDate"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="15sp" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:text="Title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/noteContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:paddingTop="1dp"
            android:text="@string/Note"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/deadlineDateContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="3dp"
                android:paddingTop="2dp"
                android:text="@string/Deadline"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/deadlineTimeContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:paddingTop="2dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
